[project]
name = "blephytracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "scikit-image>=0.26.0",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "py-spy>=0.4.1",
    "pyinstrument>=5.1.2",
    "scalene>=2.1.4",
]
